--- a/src/app/components/layout/layout.html
+++ b/src/app/components/layout/layout.html
@@ -1,15 +1,18 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/products">Logo</a>
+    <a class="navbar-brand" routerLink="/products">Online Retail Shop</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="navbar-nav ms-auto me-10">
-        <li class="nav-item" style="margin-top:-12px;">
-          <a class="nav-link active" routerLink="/add-product">Add Products</a>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/products">Home</a>
         </li>
-        <li class="nav-item" style="margin-top:-12px;">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/add-product">Add Products</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/cart">Cart</a>
         </li>
       </ul>
