--- a/src/app/components/cart/cart.css
+++ b/src/app/components/cart/cart.css
@@ -1,8 +1,19 @@
-
-.title{
-    margin-bottom: 5vh;
+.title {
+    font-size: x-large;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    margin-bottom: 30px;
+    
 }
-.card{
+
+.subtitle{
+    font-size: large;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+
+}
+.card {
     margin: 20px 50px;
     max-width: auto;
     width: 90%;
@@ -10,78 +21,84 @@
     border-radius: 1rem;
     border: transparent;
 }
-@media(max-width:767px){
-    .card{
+
+@media(max-width:767px) {
+    .card {
         margin: 3vh auto;
     }
 }
-.cart{
+
+.cart {
     background-color: #fff;
     padding: 4vh 5vh;
     border-bottom-left-radius: 1rem;
     border-top-left-radius: 1rem;
 }
-@media(max-width:767px){
-    .cart{
+
+@media(max-width:767px) {
+    .cart {
         padding: 4vh;
         border-bottom-left-radius: unset;
         border-top-right-radius: 1rem;
     }
 }
-.summary{
+
+.summary {
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bolder;
+    font-size: larger;
     background-color: #ddd;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
     padding: 4vh;
-    color: rgb(65, 65, 65);
+
 }
-@media(max-width:767px){
-    .summary{
-    border-top-right-radius: unset;
-    border-bottom-left-radius: 1rem;
+
+@media(max-width:767px) {
+    .summary {
+        border-top-right-radius: unset;
+        border-bottom-left-radius: 1rem;
     }
 }
-.summary .col-2{
+
+.summary .col-2 {
     padding: 0;
 }
-.summary .col-10
-{
+
+.summary .col-10 {
     padding: 0;
-}.row{
+}
+
+.row {
     margin: 0;
 }
-.title b{
-    font-size: 1.5rem;
-}
-.main{
+
+.main {
     margin: 0;
     padding: 2vh 0;
     width: 100%;
 }
-.col-2, .col{
-    padding: 0 1vh;
-}
-a{
-    padding: 0 1vh;
-}
-.close{
+
+
+.close {
     margin-left: auto;
     font-size: 0.7rem;
 }
-img{
+
+img {
     width: 3.5rem;
 }
-.back-to-shop{
-    margin-top: 4.5rem;
+
+.back-to-shop {
+    margin-top: 25px;
 }
-h5{
-    margin-top: 4vh;
-}
-hr{
+
+hr {
     margin-top: 1.25rem;
 }
 
-select{
+select {
     border: 1px solid rgba(0, 0, 0, 0.137);
     padding: 1.5vh 1vh;
     margin-bottom: 4vh;
@@ -89,40 +106,29 @@ select{
     width: 100%;
     background-color: rgb(247, 247, 247);
 }
-input{
-    border: 1px solid rgba(0, 0, 0, 0.137);
-    padding: 1vh;
-    margin-bottom: 4vh;
-    outline: none;
-    width: 100%;
-    background-color: rgb(247, 247, 247);
-}
 
-.btn{
-    background-color: #000;
-    border-color: #000;
-    color: white;
+
+.btn {
+    border: 3px solid rgb(233, 233, 52);
+    background-color: rgb(233, 233, 52);
+    border-radius: 50px;
+    color: black;
     width: 100%;
-    font-size: 0.7rem;
+    font-size: large;
+    font-weight:bold;
+    font-family: 'Times New Roman', Times, serif;
     margin-top: 4vh;
     padding: 1vh;
-    border-radius: 0;
 }
-.btn:focus{
+
+.btn:focus {
     box-shadow: none;
     outline: none;
     box-shadow: none;
     color: white;
-    transition: none; 
+    transition: none;
 }
-.btn:hover{
-    color: white;
-}
-a{
-    color: black; 
-}
-a:hover{
+
+a {
     color: black;
-    text-decoration: none;
 }
- 
