--- a/src/app/components/cart/cart.html
+++ b/src/app/components/cart/cart.html
@@ -10,10 +10,10 @@
 
         <div class="subtitle">
           <div class="row">
-            <div class="col text-center">Product</div>
-            <div class="col text-center">Quantity</div>
-            <div class="col align-self-center">Price</div>
-            <div class="col align-self-center">Total Price</div>
+            <div class="col-4 text-center">Product</div>
+            <div class="col-2 text-center">Quantity</div>
+            <div class="col text-center">Price</div>
+            <div class="col text-center ">Total Price</div>
           </div>
         </div>
 
@@ -61,6 +61,7 @@
       </div>
     </div>
   }
+
 
   @if (orderPlaced()) {
     <div class="row">
