--- a/src/app/components/layout/layout.html
+++ b/src/app/components/layout/layout.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="navbar-nav ms-auto me-10">
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/products">Home</a>
+          <a class="nav-link" routerLink="/products">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/add-product">Add Products</a>
