--- a/src/app/components/addproducts-component/addproducts-component.html
+++ b/src/app/components/addproducts-component/addproducts-component.html
@@ -3,108 +3,118 @@
     <div class="card-header text-center">
       <h4>Create Product</h4>
     </div>
-
     <div class="card-body">
-      <form #productForm="ngForm" (ngSubmit)="onSaveProduct(productForm)">
+      <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
 
         
         <div class="row mb-3">
           <div class="col-6 text-start">
-            <label for="ProductName" class="form-label">Product Name</label>
+            <label class="form-label">Product Name</label>
           </div>
           <div class="col-6">
-            <input type="text" [(ngModel)]="newProductObj.ProductName" name="name" class="form-control" id="ProductName" placeholder="Enter product name" required />
-          </div>
-        </div>
-
-       
-        <div class="row mb-3">
-          <div class="col-6 text-start">
-            <label for="ProductSku" class="form-label">Product SKU</label>
-          </div>
-          <div class="col-6">
-            <input type="text" [(ngModel)]="newProductObj.ProductSku" name="sku" class="form-control" id="ProductSku" placeholder="Enter product SKU" required />
+            <input type="text" formControlName="ProductName" class="form-control" placeholder="Enter product name" />
+            <div *ngIf="productForm.get('ProductName')?.touched && productForm.get('ProductName')?.invalid" class="text-danger">
+              Product name is required.
+            </div>
           </div>
         </div>
 
         
         <div class="row mb-3">
           <div class="col-6 text-start">
-            <label for="ProductPrice" class="form-label">Product Price</label>
+            <label class="form-label">Product SKU</label>
           </div>
           <div class="col-6">
-            <input type="number" [(ngModel)]="newProductObj.ProductPrice" name="price" class="form-control" id="ProductPrice" placeholder="Enter product price" required />
+            <input type="text" formControlName="ProductSku" class="form-control" placeholder="Enter SKU" />
+            <div *ngIf="productForm.get('ProductSku')?.touched && productForm.get('ProductSku')?.invalid" class="text-danger">
+              SKU is required (max 5 chars).
+            </div>
           </div>
         </div>
 
         
         <div class="row mb-3">
           <div class="col-6 text-start">
-            <label for="ProductShortName" class="form-label">Product Short Name</label>
+            <label class="form-label">Product Price</label>
           </div>
           <div class="col-6">
-            <input type="text" [(ngModel)]="newProductObj.ProductShortName" name="shortname" class="form-control" id="ProductShortName" placeholder="Enter product short name" required />
+            <input type="number" formControlName="ProductPrice" class="form-control" placeholder="Enter price" />
+            <div *ngIf="productForm.get('ProductPrice')?.touched && productForm.get('ProductPrice')?.invalid" class="text-danger">
+              Price must be greater than 0.
+            </div>
           </div>
         </div>
 
         
         <div class="row mb-3">
           <div class="col-6 text-start">
-            <label for="ProductDescription" class="form-label">Product Description</label>
+            <label class="form-label">Product Short Name</label>
           </div>
           <div class="col-6">
-            <textarea [(ngModel)]="newProductObj.ProductDescription" name="description" class="form-control" id="ProductDescription" placeholder="Enter product description" rows="3" required></textarea>
+            <input type="text" formControlName="ProductShortName" class="form-control" placeholder="Enter short name" />
           </div>
         </div>
 
         
         <div class="row mb-3">
           <div class="col-6 text-start">
-            <label for="CreatedDate" class="form-label">Created Date</label>
+            <label class="form-label">Product Description</label>
           </div>
           <div class="col-6">
-            <input type="date" [(ngModel)]="newProductObj.CreatedDate" name="createddate" class="form-control" id="CreatedDate" required />
+            <textarea formControlName="ProductDescription" class="form-control" rows="3" placeholder="Enter description"></textarea>
           </div>
         </div>
 
         
         <div class="row mb-3">
           <div class="col-6 text-start">
-            <label for="DeliveryTimeSpan" class="form-label">Delivery Time Span</label>
+            <label class="form-label">Created Date</label>
           </div>
           <div class="col-6">
-            <input type="text" [(ngModel)]="newProductObj.DeliveryTimeSpan" name="delivery" class="form-control" id="DeliveryTimeSpan" placeholder="Enter delivery time span" required />
+            <input type="date" formControlName="CreatedDate" class="form-control" />
           </div>
         </div>
 
         
         <div class="row mb-3">
           <div class="col-6 text-start">
-            <label for="CategoryId" class="form-label">Category ID</label>
+            <label class="form-label">Delivery Time Span</label>
           </div>
           <div class="col-6">
-            <input type="number" [(ngModel)]="newProductObj.CategoryId" name="categoryid" class="form-control" id="CategoryId" placeholder="Enter category ID" required />
+            <input type="text" formControlName="DeliveryTimeSpan" class="form-control" placeholder="Enter delivery time" />
+            <div *ngIf="productForm.get('DeliveryTimeSpan')?.touched && productForm.get('DeliveryTimeSpan')?.invalid" class="text-danger">
+              Delivery time span is required.
+            </div>
           </div>
         </div>
 
-       
+        
         <div class="row mb-3">
           <div class="col-6 text-start">
-            <label for="ProductImageUrl" class="form-label">Product Image URL</label>
+            <label class="form-label">Category ID</label>
           </div>
           <div class="col-6">
-            <input type="text" [(ngModel)]="newProductObj.ProductImageUrl" name="image" class="form-control" id="ProductImageUrl" placeholder="Enter product image URL" required />
+            <input type="number" formControlName="CategoryId" class="form-control" placeholder="Enter category ID" />
           </div>
         </div>
 
+        
+        <div class="row mb-3">
+          <div class="col-6 text-start">
+            <label class="form-label">Product Image URL</label>
+          </div>
+          <div class="col-6">
+            <input type="text" formControlName="ProductImageUrl" class="form-control" placeholder="Enter image URL" />
+            <div *ngIf="productForm.get('ProductImageUrl')?.touched && productForm.get('ProductImageUrl')?.invalid" class="text-danger">
+              Product image is required.
+            </div>
+          </div>
+        </div>
+
+        
         <div class="d-flex justify-content-center gap-3 mt-4">
-          
-          <button type="button" (click)="onReset(productForm)" class="btn btn-secondary w-45"><i class="fa fa-times"></i> Reset</button>
-          
-          
-          <button type="submit"  class="btn btn-primary w-45">
-            <i class="fa fa-save"></i> Create
-          </button>
+          <button type="button" class="btn btn-secondary" (click)="resetForm()">Reset</button>
+          <button type="submit" class="btn btn-primary">Create</button>
         </div>
 
       </form>
