--- a/src/app/components/products-component/products-component.html
+++ b/src/app/components/products-component/products-component.html
@@ -18,19 +18,19 @@
 
   @if (!loading() && !error()) {
   <div class="row">
-    @for (product of products(); track product.productId) {
+    @for (product of products(); track product.ProductId) {
     <div class="col-12 col-md-4 mb-4">
       <div class="card h-100 shadow-sm">
 
 
-        <img [src]="product.productImageUrl" class="card-img-top product-img" alt="{{ product.productName }}" />
+        <img [src]="product.ImageUrl" class="card-img-top product-img" alt="{{ product.ProductName }}" />
 
 
         <div class="card-body d-flex flex-column">
-          <h5 class="card-title text-center">{{ product.productName }}</h5>
+          <h5 class="card-title text-center">{{ product.ProductName }}</h5>
 
           <p class="text-center fw-bold text-success fs-5 mt-auto">
-            ₹{{ product.productPrice }}
+            ₹{{ product.ProductPrice }}
           </p>
         </div>
 
@@ -43,7 +43,7 @@
             </button>
 
 
-            <span class="px-2">{{ quantityMap[product.productId] }}</span>
+            <span class="px-2">{{ quantityMap[product.ProductId] }}</span>
 
 
             <button class="btn" (click)="increaseQuantity(product.productId)">
