--- a/src/app/components/products-component/products-component.html
+++ b/src/app/components/products-component/products-component.html
@@ -25,44 +25,40 @@
 
         <img [src]="product.ImageUrl" class="card-img-top product-img" alt="{{ product.ProductName }}" />
 
-
         <div class="card-body d-flex flex-column">
           <h5 class="card-title text-center">{{ product.ProductName }}</h5>
 
           <p class="text-center fw-bold text-success fs-5 mt-auto">
             ₹{{ product.ProductPrice }}
           </p>
+
+          @if (product.StockQuantity > 0){
+            <p class="text-center text-muted small">
+              Stock: {{ product.StockQuantity}} available
+            </p>
+          } @else{
+            <p class="text-center text-danger small">
+              Out of Stock
+            </p>
+          }
         </div>
 
 
         <div class="card-footer bg-transparent border-top-0">
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="quantity-group">
-            <button class="btn" (click)="decreaseQuantity(product.productId)">
-              <i class="fas fa-minus"></i>
-            </button>
-
-
-            <span class="px-2">{{ quantityMap[product.ProductId] }}</span>
-
-
-            <button class="btn" (click)="increaseQuantity(product.productId)">
-               <i class="fas fa-plus"></i>
-            </button>
-            </div>
-
-
-            <button (click)="addToCart(product)" class="btn btn-custom w-30">
-              Add to Cart
+            <button (click)="addToCart(product)" class="btn btn-custom w-100" [disabled] = "product.StockQuantity === 0">
+              @if (product.StockQuantity > 0){
+                  Add to Cart
+              } @else{
+                Out of Stock
+              }
+              
             </button>
           </div>
+
         </div>
-
-
-
       </div>
+    }
     </div>
     }
   </div>
-  }
-</div>
+ 
