--- a/src/app/components/layout/layout.html
+++ b/src/app/components/layout/layout.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/cart">Cart</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/order">Order</a>
+        </li>
       </ul>
       
     </div>
